--- a/SerieA_PP.ipynb
+++ b/SerieA_PP.ipynb
@@ -953,35 +953,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Roma MSE: 3.0\n",
-      "Udinese MSE: 2.625\n",
-      "Bari MSE: 1.1428571428571428\n",
-      "Chievo MSE: 0.7142857142857143\n",
-      "Fiorentina MSE: 2.875\n",
-      "Milan MSE: 6.142857142857143\n",
-      "Palermo MSE: 7.142857142857143\n",
-      "Parma MSE: 3.2857142857142856\n",
-      "Sampdoria MSE: 2.75\n",
-      "Bologna MSE: 3.5555555555555554\n",
-      "Cagliari MSE: 3.142857142857143\n",
-      "Cesena MSE: 3.142857142857143\n",
-      "Inter MSE: 5.0\n",
-      "Brescia MSE: 3.0\n",
-      "Catania MSE: 1.8571428571428572\n",
-      "Genoa MSE: 1.0\n",
-      "Juventus MSE: 4.625\n",
-      "Lazio MSE: 1.7142857142857142\n",
-      "Lecce MSE: 5.875\n",
-      "Napoli MSE: 1.625\n",
+      "Roma MSE: 7.625\n",
+      "Udinese MSE: 8.75\n",
+      "Bari MSE: 6.0\n",
+      "Chievo MSE: 1.8571428571428572\n",
+      "Fiorentina MSE: 6.125\n",
+      "Milan MSE: 5.142857142857143\n",
+      "Palermo MSE: 6.571428571428571\n",
+      "Parma MSE: 2.7142857142857144\n",
+      "Sampdoria MSE: 10.625\n",
+      "Bologna MSE: 4.333333333333333\n",
+      "Cagliari MSE: 3.4285714285714284\n",
+      "Cesena MSE: 5.571428571428571\n",
+      "Inter MSE: 5.75\n",
+      "Brescia MSE: 6.625\n",
+      "Catania MSE: 5.857142857142857\n",
+      "Genoa MSE: 4.75\n",
+      "Juventus MSE: 9.375\n",
+      "Lazio MSE: 7.428571428571429\n",
+      "Lecce MSE: 10.25\n",
+      "Napoli MSE: 6.125\n",
       "\n",
-      "MSE for all teams: 64.21626984126985\n"
+      "MSE for all teams: 124.90476190476191\n"
      ]
     }
    ],
@@ -998,10 +998,13 @@
     "        compare1 = dataframe1[dataframe1.HomeTeam == team]\n",
     "        compare2 = dataframe2[dataframe2.HomeTeam == team]\n",
     "        \n",
-    "        Y_pred = compare1.FTHG.values\n",
-    "        Y_true = compare2.FTAG.values\n",
+    "        Y_pred_home = compare1.FTHG.values\n",
+    "        Y_true_home = compare2.FTHG.values\n",
     "        \n",
-    "        MSE = np.square(np.subtract(Y_true,Y_pred)).mean()\n",
+    "        Y_pred_away = compare1.FTAG.values\n",
+    "        Y_true_away = compare2.FTAG.values\n",
+    "        \n",
+    "        MSE = np.square(np.subtract(Y_true_home,Y_pred_home) + np.subtract(Y_true_away,Y_pred_away)).mean()\n",
     "        MSE_all += MSE\n",
     "        print(team + \" MSE: \" + str(MSE))\n",
     "    \n",
